# ss_sim

./: .gitignore  CMakeLists.txt  DESIGN_WORKFLOW  README.md  asteroid_fetcher.py  asteroids_code.cpp  main.cpp
src/physics/: CelestialBody.cpp  CelestialBody.h  NBodySimulation.cpp  NBodySimulation.h
src/visualization/: SolarSystemWidget.cpp  SolarSystemWidget.h
